# trading-platform

./: .gitignore  AGENT.md  README.md  pyproject.toml
agent/: knowledge_capture.md  patterns.md  project_rules.md  task_creation.md  task_selection.md  version_control.md  workflow.md
agent/templates/: implementation_session_prompt.md  planning_session_prompt.md
backlog/: fix_plan.md
backlog/open/: T-00000-harness-preflight.md  T-00001.md  T-00002.md  T-00003.md  T-00004.md  T-00005.md  T-00006.md  T-00007.md
dev_harness/: task_selector.py
docs/: agentic_workflow_rationale.md  harness_state_machine.md  recovery_plan_schema.md  tooling_decisions.md
runbooks/: agent_session.md  recovery.md  setup.md
scripts/: bootstrap.sh  execute_recovery.py  finalize_session.py  run_agent_session.py  run_dev_loop.py  run_fast_checks.sh  session_init.sh  start_local_services.sh  stop_local_services.sh  validate_recovery_plan.py  verify_env.sh  verify_session_outcome.py
specs/: architecture.md  data_model.md  execution_domain.md  interfaces.md  ledger_and_recovery.md  market_domain.md  overview.md  risk_and_portfolio.md  runtime_control.md  system_model.md  trader_runtime.md
status/: checkpoints.md  session_handoff.md
status/handoff_history/: README.md
status/recovery_history/: README.md  template.md
tests/dev_harness/: test_task_selector.py
